# raytracerCL

./: .gitignore  CMakeLists.txt  Makefile  input2dummy.sh  input2dummy2.sh
src/: RayTracer.cpp  main.cpp
src/fileio/: pngimage.h
src/scene/: light.h  scene.cpp  scene.h  spatialHash.h
src/vecmath/: vec.h
test/: CMakeLists.txt
test/testphotonmap/: CMakeLists.txt  PhotonMapper_unit_tests.cpp
